--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ p{font-size:17px;font-weight:400;line-height:1.4em;/*text-shadow: 0px 2px 2px rg
 <body>
 	
    <!-- audio -->
-  <audio id="linkmp3">https://marcywa.github.io/you-belong-with.me.github.io/you belong with me.mp3</audio>
+  <audio id="linkmp3">https://created-by-marc.github.io/you-belong-with.me.github.io/you belong with me.mp3</audio>
    
    <div id="bodyblur">
      <!-- Wallpaper --><img src="https://e0.pxfuel.com/wallpapers/418/302/desktop-wallpaper-iphone-x-art-anime-japan-street-cute-japanese-aesthetic-phone.jpg" id="wallpaper"/>
@@ -141,7 +141,7 @@ p{font-size:17px;font-weight:400;line-height:1.4em;/*text-shadow: 0px 2px 2px rg
     window.jawaban = jawaban;
     pesanwhatsapp = jawaban;
     await swals.fire('!', 'please max your volume,💖', 'success');
-    window.location = "https://marcywa.github.io/with-me.github.io/index.html";
+    window.location = "https://created-by-marc.github.io/with-me.github.io/index.html";
     tombol();
   } else {
     await swals.fire('oops!', 'please put a name, 🙂!!');jawab();
