--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ p{font-size:17px;font-weight:400;line-height:1.4em;/*text-shadow: 0px 2px 2px rg
     window.jawaban = jawaban;
     pesanwhatsapp = jawaban;
     await swals.fire('!', 'please max your volume,💖', 'success');
-    window.location = "https://created-by-marc.github.io/with-me.github.io/index.html";
+    window.location = "https://created-by-marc.github.io/with-me/index.html";
     tombol();
   } else {
     await swals.fire('oops!', 'please put a name, 🙂!!');jawab();
