--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html><meta charset='UTF-8'/><meta content='width=device-width, initial-scale=1, user-scalable=1, minimum-scale=1, maximum-scale=5' name='viewport'/><meta content='IE=edge' http-equiv='X-UA-Compatible'/>
+<html>
+  <meta charset='UTF-8'/><meta content='width=device-width, initial-scale=1, user-scalable=1, minimum-scale=1, maximum-scale=5' name='viewport'/><meta content='IE=edge' http-equiv='X-UA-Compatible'/>
 <link href="https://c2d0ba4f-1a88-435a-b6c5-be03ea0a1f8c.id.repl.co/style.css" rel="stylesheet" type="text/css" /> 
 <head>
 <title>no one knows</title>
-<meta name="description" content="created by marc..">
-<meta name="keywords" content="hehehehe">
+<meta name="description"
+content="created by marc..">
+<meta name="keywords"
+content="hehehehe">
 <link rel="icon" type="image/x-icon" href="https://www.palingit.com/favicon.ico">
-
-<!--<link href="https://feeldreams.github.io/hayoloh/style.css" rel="stylesheet" type="text/css" />-->
 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"><script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.19/dist/sweetalert2.all.min.js"></script><script src="https://kit.fontawesome.com/4f3ce16e3e.js" crossorigin="anonymous"></script>
 </head>
 <style>
@@ -20,7 +21,7 @@
 }
 @keyframes fanim {0% {background-position: 0% 0%;}25% {background-position: 100% 100%;} 50% {background-position: 0% 100%;} 75% {background-position: 50% 50%;} 100% {background-position: 0% 0%;}}
 body{background-color:#000;font-family:var(--gaya-font);padding: 20px 25px;-webkit-user-select: none; -ms-user-select: none; user-select: none;} a{text-decoration:none;}
-body::before{content:"\00A9  marc | PalingIT";color:white;opacity:0;font-size:10px;position:fixed;bottom:25px;right:25px;z-index:2}
+body::before{content:"\00A9  created by | marc ";color:white;opacity:0;font-size:10px;position:fixed;bottom:25px;right:25px;z-index:2}
 #bodyblur{opacity:.3;animation: jj 5s infinite;position:fixed;top:0;left:0;right:0;bottom:0;background:rgba(0,0,0,.3);z-index:-1;transition:all 1s ease;} 
 #wallpaper{transform: scale(1.5);width:100%;height:100%;transition:all 2s ease;}
 #beneranblur{position:fixed;top:0;left:0;right:0;bottom:0;background:rgba(0,0,0,.3);-webkit-backdrop-filter:blur(3px); backdrop-filter:blur(3px);transition:all 3s ease;}
